Base of Portfolio

--- a/index.html
+++ b/index.html
@@ -1,1 +1,33 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        
+        <link rel = "stylesheet" type = "text/css" href = "style.css" />
+        <link href="https://fonts.googleapis.com/css?family=Hind+Siliguri:300,400,600&display=swap" rel="stylesheet">
+
+        <title>Noxyper Games</title>
+    </head>
+    <body>
+        <header>
+            <a href="."><img src="Assets/Noxyper Banner.png"></a>
+            <nav>
+                <a href=#about-me>About Me</a>
+                <div class="secondary-nav">
+                    <button href=#projects onclick="location.href='#projects';" class="secondary-nav-button">Projects</button>
+                    <div class="secondary-nav-content">
+                        <a href=#games>Games</a>
+                        <a href=#packages>Packages</a>
+                        <a href=#programs>Programs</a>
+                    </div>
+                </div>
+                <a href=#contact>Contact</a>
+            </nav>
+        </header>
+        <section id="about-me">about-me</section>
+        <section id="projects">projects</section>
+        <section id="contact">contact</section>
+    </body>
+</html>
