Added sections + about me

--- a/index.html
+++ b/index.html
@@ -26,8 +26,36 @@
                 <a href=#contact>Contact</a>
             </nav>
         </header>
-        <section id="about-me">about-me</section>
-        <section id="projects">projects</section>
-        <section id="contact">contact</section>
+        <section id="about-me">
+            <div class="top"></div>
+            <div class="center">
+                <h1 style="text-align: right; width: 33%; font-size: 8vw;">Nemo</h1>
+                <div style="width: 25%;">
+                    <img src="Assets/Photo.png" class="info">
+                </div>
+                <h1 style="text-align: left; width: 33%; font-size: 8vw;">Wirén</h1>
+            </div>
+            <div class="bottom">
+                <h1>About Me</h1>
+                <p>I'm a university student currently studying Computer Games Technology who goes above and beyond the standard. I have already developed a plethora of projects, varying in everything from games to software.</p>    
+            </div>
+        </section>
+        <section id="projects">
+            <div class="top"></div>
+            <div class="center">
+                <h1>Projects</h1>
+                <p>I house all my projects on either itch.io or github.com. The more interesting projects are displayed here, but there are more on those websites. If you're interested in downloading / purchasing any of my projects, they're all available on their selective websites.</p>
+            </div>
+            <div class="bottom"></div>
+        </section>
+        <section id="contact">
+            <div class="top">
+            </div>
+            <div class="center">
+                <h1>Contact</h1>
+                <p>I'm most easily contacted through email, but I'm available on Twitter, Discord, and LinkedIn as well. You're welcome to contact me whenever, but I'd rather keep my internet presence as decluttered as possible. (tl;dr: don't spam me)</p>
+            </div>
+            <div class="bottom"></div>
+        </section>
     </body>
 </html>
