--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <a href=#contact>Contact</a>
             </nav>
         </header>
-        <section id="about-me">
+        <section id="about-me" style="border-bottom: 1vh #232323 dashed;">
             <div class="top"></div>
             <div class="center">
                 <h1 style="text-align: right; width: 33%; font-size: 8vw;">Nemo</h1>
@@ -40,7 +40,7 @@
                 <p>I'm a university student currently studying Computer Games Technology who goes above and beyond the standard. I have already developed a plethora of projects, varying in everything from games to software.</p>    
             </div>
         </section>
-        <section id="projects">
+        <section id="projects" style="border-bottom: 1vh #232323 dashed;">
             <div class="top"></div>
             <div class="center">
                 <h1>Projects</h1>
@@ -48,7 +48,7 @@
             </div>
             <div class="bottom"></div>
         </section>
-        <section id="contact">
+        <section id="contact" style="border-bottom: 1vh #232323 dashed;">
             <div class="top">
             </div>
             <div class="center">
