--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
     </head>
     <body>
         <header>
-            <a href="."><img src="Assets/Noxyper Banner.png"></a>
+			<div class="logos">
+				<img src="Assets/Whiskey.gif" id="mascot">
+				<a href="index.html"><img src="Assets/Noxyper Banner.png"></a>
+			</div>
             <nav>
                 <a href=#about-me>About Me</a>
                 <div class="secondary-nav">
@@ -26,7 +29,7 @@
                 <a href=#contact>Contact</a>
             </nav>
         </header>
-        <section id="about-me" style="border-bottom: 1vh #232323 dashed;">
+        <section id="about-me" style="border-bottom: 1vh #232323 solid;">
             <div class="top"></div>
             <div class="center">
                 <h1 style="text-align: right; width: 33%; font-size: 8vw;">Nemo</h1>
@@ -37,23 +40,23 @@
             </div>
             <div class="bottom">
                 <h1>About Me</h1>
-                <p>I'm a university student currently studying Computer Games Technology who goes above and beyond the standard. I have already developed a plethora of projects, varying in everything from games to software.</p>    
+                <p>I'm a programmer first, but I really enjoy writing and reading stories as well. I have played games for a long time, with some of my favourite games being Mass Effect, Fallout 4, and Phoenix Wright: Ace Attorney, but I also enjoy a good party game every now and then. I'm also a bit of a movie buff, with Edgar Wright's movies leading the charge (Baby Driver being probably the favourite) and Whiplash coming right after the Cornetto trilogy. I can hold my own pretty well, I'm pretty thick skinned when it comes to critisism. I'm one of those who can differentiate between professionalism whilst working and acting casually when on a break. I'm also a big fan of penguins.</p>
             </div>
         </section>
-        <section id="projects" style="border-bottom: 1vh #232323 dashed;">
+        <section id="projects" style="border-bottom: 1vh #232323 solid;">
             <div class="top"></div>
             <div class="center">
                 <h1>Projects</h1>
-                <p>I house all my projects on either itch.io or github.com. The more interesting projects are displayed here, but there are more on those websites. If you're interested in downloading / purchasing any of my projects, they're all available on their selective websites.</p>
+                <p></p>
             </div>
             <div class="bottom"></div>
         </section>
-        <section id="contact" style="border-bottom: 1vh #232323 dashed;">
+        <section id="contact" style="border-bottom: 1vh #232323 solid;">
             <div class="top">
             </div>
             <div class="center">
                 <h1>Contact</h1>
-                <p>I'm most easily contacted through email, but I'm available on Twitter, Discord, and LinkedIn as well. You're welcome to contact me whenever, but I'd rather keep my internet presence as decluttered as possible. (tl;dr: don't spam me)</p>
+                <p></p>
             </div>
             <div class="bottom"></div>
         </section>
