--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="center">
                 <h1 style="text-align: right; width: 33%; font-size: 8vw;">Nemo</h1>
                 <div style="width: 25%;">
-                    <img src="Assets/Photo.png" class="info">
+                    <img src="Assets/Photo.png" class="info" style="position: absolute; clip-path: polygon(15% 15%, 5% 90%, 95% 95%, 90% 10%);">
                 </div>
                 <h1 style="text-align: left; width: 33%; font-size: 8vw;">Wirén</h1>
             </div>
@@ -43,15 +43,33 @@
                 <p>I'm a programmer first, but I really enjoy writing and reading stories as well. I have played games for a long time, with some of my favourite games being Mass Effect, Fallout 4, and Phoenix Wright: Ace Attorney, but I also enjoy a good party game every now and then. I'm also a bit of a movie buff, with Edgar Wright's movies leading the charge (Baby Driver being probably the favourite) and Whiplash coming right after the Cornetto trilogy. I can hold my own pretty well, I'm pretty thick skinned when it comes to critisism. I'm one of those who can differentiate between professionalism whilst working and acting casually when on a break. I'm also a big fan of penguins.</p>
             </div>
         </section>
-        <section id="projects" style="border-bottom: 1vh #232323 solid;">
-            <div class="top"></div>
-            <div class="center">
+        <section id="projects" style="background-color: #232323; border-bottom: 1vh #070707 solid;">
+            <div class="top" id="games">
+				<h1></h1>
+				<div class="projects" style="width: 75%;">
+					<a href="https://noxyper.itch.io/delivery-demolition/"><img src="https://img.itch.zone/aW1nLzI1Mjg1MzgucG5n/315x250%23c/hPgfvQ.png" ></a>
+					<a href="https://noxyper.itch.io/caribbean-waters/"><img src="https://img.itch.zone/aW1nLzI0MjE0MzYucG5n/315x250%23c/de%2FYWe.png" ></a>
+					<a href="https://noxyper.itch.io/shouting-at-waves/"><img src="https://img.itch.zone/aW1hZ2UvMjA3NDAzLzk3MTkyNi5wbmc=/315x250%23c/%2BKwrsJ.png" style="background-color:#cfcdcf; float: left;"></a>
+				</div>
+			</div>
+            <div class="center" id="packages">
                 <h1>Projects</h1>
-                <p></p>
+                <div class="projects" style="width: 75%;">
+					<a href="."><img src="Assets/Missing Image.jpg"></a>
+					<a href="."><img src="Assets/Missing Image.jpg"></a>
+					<a href="."><img src="Assets/Missing Image.jpg"></a>
+				</div>
             </div>
-            <div class="bottom"></div>
+            <div class="bottom" id="programs">
+				<h1></h1>
+				<div class="projects" style="width: 75%;">
+					<a href="."><img src="Assets/Missing Image.jpg"></a>
+					<a href="."><img src="Assets/Missing Image.jpg"></a>
+					<a href="."><img src="Assets/Missing Image.jpg"></a>
+				</div>
+			</div>
         </section>
-        <section id="contact" style="border-bottom: 1vh #232323 solid;">
+        <section id="contact" style="background-color: #070707;">
             <div class="top">
             </div>
             <div class="center">
