--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         
-        <link rel = "stylesheet" type = "text/css" href = "style.css" />
+		<link rel="icon" type="image/png" href="Assets/WhiskeyIcon.png">
+        <link rel="stylesheet" type="text/css" href="style.css" />
         <link href="https://fonts.googleapis.com/css?family=Hind+Siliguri:300,400,600&display=swap" rel="stylesheet">
 
         <title>Noxyper Games</title>
@@ -44,7 +45,7 @@
             </div>
         </section>
         <section id="projects" style="background-color: #232323; border-bottom: 1vh #070707 solid;">
-            <div class="top" id="games">
+			<div class="top" id="games">
 				<h1></h1>
 				<div class="projects" style="width: 75%;">
 					<a href="https://noxyper.itch.io/delivery-demolition/"><img src="https://img.itch.zone/aW1nLzI1Mjg1MzgucG5n/315x250%23c/hPgfvQ.png" ></a>
@@ -69,14 +70,15 @@
 				</div>
 			</div>
         </section>
-        <section id="contact" style="background-color: #070707;">
+        <section id="contact" style="background-color: #070707; height: 10vw">
             <div class="top">
             </div>
             <div class="center">
                 <h1>Contact</h1>
-                <p></p>
+				<p>Twitter: @Noxyper<br>Email: up940311@myport.ac.uk<br>Mobile: 07598 088222</p>
             </div>
-            <div class="bottom"></div>
+            <div class="bottom">
+			</div>
         </section>
     </body>
 </html>
