--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8">
+	    <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         
@@ -9,76 +9,32 @@
         <link rel="stylesheet" type="text/css" href="style.css" />
         <link href="https://fonts.googleapis.com/css?family=Hind+Siliguri:300,400,600&display=swap" rel="stylesheet">
 
-        <title>Noxyper Games</title>
-    </head>
-    <body>
-        <header>
-			<div class="logos">
-				<img src="Assets/Whiskey.gif" id="mascot">
-				<a href="index.html"><img src="Assets/Noxyper Banner.png"></a>
-			</div>
+        <title>Nemo Wirén</title>
+		
+
+	</head>
+	<body>
+		<header>
+			<img src="Assets/Nemo Banner.png" class="logo">
             <nav>
-                <a href=#about-me>About Me</a>
-                <div class="secondary-nav">
-                    <button href=#projects onclick="location.href='#projects';" class="secondary-nav-button">Projects</button>
-                    <div class="secondary-nav-content">
-                        <a href=#games>Games</a>
-                        <a href=#packages>Packages</a>
-                        <a href=#programs>Programs</a>
-                    </div>
-                </div>
-                <a href=#contact>Contact</a>
+				<div>
+					<a href=#about-me>About Me</a>
+					<a href=#project>Projects</a>
+					<a href=#contact>Contact</a>
+				</div>
             </nav>
-        </header>
-        <section id="about-me" style="border-bottom: 1vh #232323 solid;">
-            <div class="top"></div>
-            <div class="center">
-                <h1 style="text-align: right; width: 33%; font-size: 8vw;">Nemo</h1>
-                <div style="width: 25%;">
-                    <img src="Assets/Photo.png" class="info" style="position: absolute; clip-path: polygon(15% 15%, 5% 90%, 95% 95%, 90% 10%);">
-                </div>
-                <h1 style="text-align: left; width: 33%; font-size: 8vw;">Wirén</h1>
-            </div>
-            <div class="bottom">
-                <h1>About Me</h1>
-                <p>I'm a programmer first, but I really enjoy writing and reading stories as well. I have played games for a long time, with some of my favourite games being Mass Effect, Fallout 4, and Phoenix Wright: Ace Attorney, but I also enjoy a good party game every now and then. I'm also a bit of a movie buff, with Edgar Wright's movies leading the charge (Baby Driver being probably the favourite) and Whiplash coming right after the Cornetto trilogy. I can hold my own pretty well, I'm pretty thick skinned when it comes to critisism. I'm one of those who can differentiate between professionalism whilst working and acting casually when on a break. I'm also a big fan of penguins.</p>
-            </div>
-        </section>
-        <section id="projects" style="background-color: #232323; border-bottom: 1vh #070707 solid;">
-			<div class="top" id="games">
-				<h1></h1>
-				<div class="projects" style="width: 75%;">
-					<a href="https://noxyper.itch.io/delivery-demolition/"><img src="https://img.itch.zone/aW1nLzI1Mjg1MzgucG5n/315x250%23c/hPgfvQ.png" ></a>
-					<a href="https://noxyper.itch.io/caribbean-waters/"><img src="https://img.itch.zone/aW1nLzI0MjE0MzYucG5n/315x250%23c/de%2FYWe.png" ></a>
-					<a href="https://noxyper.itch.io/shouting-at-waves/"><img src="https://img.itch.zone/aW1hZ2UvMjA3NDAzLzk3MTkyNi5wbmc=/315x250%23c/%2BKwrsJ.png" style="background-color:#cfcdcf; float: left;"></a>
+		</header>
+		<section id="about-me">
+			<div class="background">
+				<div id="hexProfile">
 				</div>
-			</div>
-            <div class="center" id="packages">
-                <h1>Projects</h1>
-                <div class="projects" style="width: 75%;">
-					<a href="."><img src="Assets/Missing Image.jpg"></a>
-					<a href="."><img src="Assets/Missing Image.jpg"></a>
-					<a href="."><img src="Assets/Missing Image.jpg"></a>
-				</div>
-            </div>
-            <div class="bottom" id="programs">
-				<h1></h1>
-				<div class="projects" style="width: 75%;">
-					<a href="."><img src="Assets/Missing Image.jpg"></a>
-					<a href="."><img src="Assets/Missing Image.jpg"></a>
-					<a href="."><img src="Assets/Missing Image.jpg"></a>
-				</div>
+				<script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js'></script>
+				<script type="text/javascript">
+					var images=['Laugh.png', 'Phone.png', 'Squat.png', 'Dumb.png'];
+					
+					$('<img src="Assets/Hex Profiles/HexProfile ' + images[Math.floor(Math.random() * images.length)] + '" style="width: 100vh;">').appendTo('#hexProfile');
+				</script>
 			</div>
         </section>
-        <section id="contact" style="background-color: #070707; height: 10vw">
-            <div class="top">
-            </div>
-            <div class="center">
-                <h1>Contact</h1>
-				<p>Twitter: @Noxyper<br>Email: up940311@myport.ac.uk<br>Mobile: 07598 088222</p>
-            </div>
-            <div class="bottom">
-			</div>
-        </section>
-    </body>
+	</body>
 </html>
