--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				<script type="text/javascript">
 					var images=['Laugh.png', 'Phone.png', 'Squat.png', 'Dumb.png'];
 					
-					$('<img src="Assets/Hex Profiles/HexProfile ' + images[Math.floor(Math.random() * images.length)] + '" style="width: 100vh;">').appendTo('#hexProfile');
+					$('<img src=url("Assets/Hex Profiles/HexProfile ' + images[Math.floor(Math.random() * images.length)] + '") style="width: 100vh;">').appendTo('#hexProfile');
 				</script>
 			</div>
         </section>
