--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
 				<div id="hexProfile">
 				</div>
 				<script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js'></script>
-				<script type="text/javascript">
+				<script type='text/javascript'>
 					var images=['Laugh.png', 'Phone.png', 'Squat.png', 'Dumb.png'];
 					
-					$('<img src=url("Assets/Hex Profiles/HexProfile ' + images[Math.floor(Math.random() * images.length)] + '") style="width: 100vh;">').appendTo('#hexProfile');
+					$('<img src="Assets/Hex Profiles/HexProfile ' + images[Math.floor(Math.random() * images.length)] + '" style="width: 100vh;">').appendTo('#hexProfile');
 				</script>
 			</div>
         </section>
