--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			<div class="background">
 				<div id="hexProfile">
 				</div>
-				<script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js'></script>
+				<script type='text/javascript' src='https://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js'></script>
 				<script type='text/javascript'>
 					var images=['Laugh.png', 'Phone.png', 'Squat.png', 'Dumb.png'];
 					
