Project page added

--- a/projects.html
+++ b/projects.html
@@ -12,8 +12,6 @@
 		<script src="https://kit.fontawesome.com/14b0c5612d.js" crossorigin="anonymous"></script>
 
         <title>Nemo Wirén</title>
-		
-
 	</head>
 	<body>
 		<header>
@@ -28,20 +26,18 @@
 		</header>
 		<div class="nav-offset"></div>
 		<section id="about-me">
-			<div class="background" style="background-size: 37.5vmin; height: 58vh;">
+			<div class="background" style="background-size: 60vmin; height: 74vh;">
 				<div id="hexProfile">
 					<div class="name" style="position: absolute;"></div>
 				</div>
-				<script type='text/javascript' src='https://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js'></script>
-				<script type='text/javascript'>
-					var images=['Laugh.png', 'Phone.png', 'Squat.png', 'Dumb.png'];
-					
-					$('<img src="Assets/Hex Profiles/HexProfile ' + images[Math.floor(Math.random() * images.length)] + '" style="width: 75vmin;">').appendTo('#hexProfile');
-				</script>
-			</div>
-			<div class="paragraph">
-				<div style="position: absolute; width: 100%; left: 0; height: inherit; background-color: #1C1C1C; opacity: 0.8; padding: 0 2vw; z-index: -1;"></div>
-				<p>I'm a programmer first, but I really enjoy writing and reading stories as well. I have played games for a long time, with some of my favourite games being Mass Effect, Fallout 4, and Phoenix Wright: Ace Attorney, but I also enjoy a good party game every now and then. I'm also a bit of a movie buff, with Edgar Wright's movies leading the charge (Baby Driver being probably the favourite) and Whiplash coming right after the Cornetto trilogy. I can hold my own pretty well, I'm pretty thick skinned when it comes to critisism. I'm one of those who can differentiate between professionalism whilst working and acting casually when on a break. I'm also a big fan of penguins.</p>
+				<div class="big-thumb">
+					<a class="thumb dd-thumb" href="https://noxyper.itch.io/delivery-demolition/"></a>
+					<a class="thumb cw-thumb" href="https://noxyper.itch.io/caribbean-waters/" style="position: absolute; left: 3.4vmin; top: 28.3vmin;"></a>
+				</div>
+				<div class="small-thumb">
+					<a class="thumb writing-thumb" href="https://www.reddit.com/NoxieWrites/"></a>
+					<a class="thumb github-thumb" href="https://www.github.com/Noxyper/" style="position: absolute; top: 11.3vmin; left: 3.3vmin;"></a>
+				</div>
 			</div>
 			<footer>
 				<ul class="socials">
