--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				<div>
 					<a href="index.html">About Me</a>
 					<a href="projects.html">Projects</a>
-					<a href="contact.html">Contact</a>
+					<a href="Files/CV.pdf">CV</a>
 				</div>
             </nav>
 		</header>
