--- a/index.html
+++ b/index.html
@@ -6,14 +6,12 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         
 		<link rel="icon" type="image/png" href="Assets/WhiskeyIcon.png">
-        <link rel="stylesheet" type="text/css" href="style.css" />
+        <link rel="stylesheet" type="text/css" href="style-mobile.css" />
         <link href="https://fonts.googleapis.com/css?family=Hind+Siliguri:300,400,600&display=swap" rel="stylesheet">
 		<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 		<script src="https://kit.fontawesome.com/14b0c5612d.js" crossorigin="anonymous"></script>
 
-        <title>Nemo Wirén</title>
-		
-
+        <title>Naomi Wirén</title>
 	</head>
 	<body>
 		<header>
@@ -28,20 +26,22 @@
 		</header>
 		<div class="nav-offset"></div>
 		<section id="about-me">
-			<div class="background" style="background-size: 37.5vmin; height: 58vh;">
+			<div class="background" style="background-size: 22.5em; height: 58vh;">
 				<div id="hexProfile">
-					<div class="name" style="position: absolute;"></div>
 				</div>
+				<div class="name"></div>
+
 				<script type='text/javascript' src='https://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js'></script>
 				<script type='text/javascript'>
-					var images=['Laugh.png', 'Phone.png', 'Squat.png', 'Dumb.png'];
+					var images=['Phone.png', 'Squat.png', 'Dumb.png'];
 					
-					$('<img src="Assets/Hex Profiles/HexProfile ' + images[Math.floor(Math.random() * images.length)] + '" style="width: 75vmin;">').appendTo('#hexProfile');
+					$('<img src="Assets/Hex Profiles/HexProfile ' + images[Math.floor(Math.random() * images.length)] + '" style="width: 30em;">').appendTo('#hexProfile');
 				</script>
 			</div>
 			<div class="paragraph">
-				<div style="position: absolute; width: 100%; left: 0; height: inherit; background-color: #1C1C1C; opacity: 0.8; padding: 0 2vw; z-index: -1;"></div>
-				<p>I'm a programmer first, but I really enjoy writing and reading stories as well. I have played games for a long time, with some of my favourite games being Mass Effect, Fallout 4, and Phoenix Wright: Ace Attorney, but I also enjoy a good party game every now and then. I'm also a bit of a movie buff, with Edgar Wright's movies leading the charge (Baby Driver being probably the favourite) and Whiplash coming right after the Cornetto trilogy. I can hold my own pretty well, I'm pretty thick skinned when it comes to critisism. I'm one of those who can differentiate between professionalism whilst working and acting casually when on a break. I'm also a big fan of penguins.</p>
+				<div style="display:inline-block; width: 100%; background-color: #1C1C1C; opacity: 0.8; z-index: -1;">
+					<p style="width: 75%; margin-left: 12.5%;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In consequat ac metus in molestie. Nunc pulvinar scelerisque mauris nec laoreet. Proin quis turpis a orci ornare bibendum. In nisi tellus, sollicitudin eget leo ut, laoreet convallis leo. Duis ac quam massa. Cras volutpat neque consectetur velit tempus, ac dictum mi malesuada. Curabitur nec volutpat tortor, id ultrices nibh. Sed id nisi vehicula, malesuada enim id, malesuada metus. Nulla non tortor tempus, facilisis ante cursus, placerat magna.</p>
+				</div>
 			</div>
 			<footer>
 				<ul class="socials">
