--- a/projects.html
+++ b/projects.html
@@ -6,12 +6,12 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         
 		<link rel="icon" type="image/png" href="Assets/WhiskeyIcon.png">
-        <link rel="stylesheet" type="text/css" href="style.css" />
+        <link rel="stylesheet" type="text/css" href="style-mobile.css" />
         <link href="https://fonts.googleapis.com/css?family=Hind+Siliguri:300,400,600&display=swap" rel="stylesheet">
 		<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 		<script src="https://kit.fontawesome.com/14b0c5612d.js" crossorigin="anonymous"></script>
 
-        <title>Nemo Wirén</title>
+        <title>Naomi Wirén</title>
 	</head>
 	<body>
 		<header>
@@ -26,17 +26,15 @@
 		</header>
 		<div class="nav-offset"></div>
 		<section id="about-me">
-			<div class="background" style="background-size: 60vmin; height: 74vh;">
-				<div id="hexProfile">
-					<div class="name" style="position: absolute;"></div>
-				</div>
+			<div class="background" style="background-size: 60vh; height: 72vh;">
+				<div class="name mobile-hide" style="position: absolute;"></div>
 				<div class="big-thumb">
 					<a class="thumb dd-thumb" href="https://noxyper.itch.io/delivery-demolition/"></a>
-					<a class="thumb cw-thumb" href="https://noxyper.itch.io/caribbean-waters/" style="position: absolute; left: 3.4vmin; top: 28.3vmin;"></a>
+					<a class="thumb cw-thumb" href="https://noxyper.itch.io/caribbean-waters/"></a>
 				</div>
 				<div class="small-thumb">
 					<a class="thumb writing-thumb" href="https://www.reddit.com/NoxieWrites/"></a>
-					<a class="thumb github-thumb" href="https://www.github.com/Noxyper/" style="position: absolute; top: 11.3vmin; left: 3.3vmin;"></a>
+					<a class="thumb github-thumb" href="https://www.github.com/Noxyper/"></a>
 				</div>
 			</div>
 			<footer>
