Recentered socials and scaled projects for mobile

--- a/projects.html
+++ b/projects.html
@@ -26,7 +26,7 @@
 		</header>
 		<div class="nav-offset"></div>
 		<section id="about-me">
-			<div class="background" style="background-size: 60vh; height: 72vh;">
+			<div class="background projects">
 				<div class="name mobile-hide" style="position: absolute;"></div>
 				<div class="big-thumb">
 					<a class="thumb dd-thumb" href="https://noxyper.itch.io/delivery-demolition/"></a>
