--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
 			<img src="Assets/Nemo Banner.png" class="logo">
             <nav>
 				<div>
-					<a href="index.html">About Me</a>
-					<a href="projects.html">Projects</a>
+					<a href="https://naomiwiren.com/">About Me</a>
+					<a href="https://naomiwiren.com/projects">Projects</a>
+					<a href="https://naomiwiren.com/blog">Blog</a>
 					<a href="Files/CV.pdf">CV</a>
 				</div>
             </nav>
@@ -46,7 +47,7 @@
 			</div>
 			<footer>
 				<ul class="socials">
-					<a href="mailto: n.n.wiren@gmail.com" class="fas fa-at"></a>
+					<a href="mailto: business@naomiwiren.com" class="fas fa-at"></a>
 					<a href="https://www.twitter.com/Noxyper" class="fab fa-twitter"></a>
 					<a href="https://noxyper.itch.io/" class="fab fa-itch-io"></a>
 				</ul>
