--- a/projects.html
+++ b/projects.html
@@ -18,8 +18,9 @@
 			<img src="Assets/Nemo Banner.png" class="logo">
             <nav>
 				<div>
-					<a href="index.html">About Me</a>
-					<a href="projects.html">Projects</a>
+					<a href="https://naomiwiren.com/">About Me</a>
+					<a href="https://naomiwiren.com/projects">Projects</a>
+					<a href="https://naomiwiren.com/blog">Blog</a>
 					<a href="Files/CV.pdf">CV</a>
 				</div>
             </nav>
@@ -27,7 +28,7 @@
 		<div class="nav-offset"></div>
 		<section id="about-me">
 			<div class="background projects">
-				<div class="name mobile-hide" style="position: absolute;"></div>
+				<div class="name mobile-hide"></div>
 				<div class="big-thumb">
 					<a class="thumb dd-thumb" href="https://noxyper.itch.io/delivery-demolition/"></a>
 					<a class="thumb cw-thumb" href="https://noxyper.itch.io/caribbean-waters/"></a>
@@ -39,7 +40,7 @@
 			</div>
 			<footer>
 				<ul class="socials">
-					<a href="mailto: n.n.wiren@gmail.com" class="fas fa-at"></a>
+					<a href="mailto: business@naomiwiren.com" class="fas fa-at"></a>
 					<a href="https://www.twitter.com/Noxyper" class="fab fa-twitter"></a>
 					<a href="https://noxyper.itch.io/" class="fab fa-itch-io"></a>
 				</ul>
