--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 			<footer>
 				<ul class="socials">
 					<a href="mailto: business@naomiwiren.com" class="fas fa-at"></a>
-					<a href="https://www.twitter.com/Noxyper" class="fab fa-twitter"></a>
+					<a href="https://www.twitter.com/NaomiWiren" class="fab fa-twitter"></a>
 					<a href="https://noxyper.itch.io/" class="fab fa-itch-io"></a>
 				</ul>
 			</footer>
