Added Cover Letter

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 					<a href="https://naomiwiren.com/projects">Projects</a>
 					<a href="https://naomiwiren.com/blog">Blog</a>
 					<a href="Files/CV.pdf">CV</a>
+					<a href="Files/Cover Letter.pdf">Cover Letter</a> <!-- Remove after submission -->
 				</div>
             </nav>
 		</header>
