New tabs, and faster loading

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 					<a href="https://naomiwiren.com/">About Me</a>
 					<a href="https://naomiwiren.com/projects">Projects</a>
 					<a href="https://naomiwiren.com/blog">Blog</a>
-					<a href="Files/CV.pdf">CV</a>
-					<a href="Files/Cover Letter.pdf">Cover Letter</a> <!-- Remove after submission -->
+					<a href="Files/CV.pdf" target="_blank">CV</a>
+					<a href="Files/Cover Letter.pdf" target="_blank">Cover Letter</a> <!-- Remove after submission -->
 				</div>
             </nav>
 		</header>
@@ -48,9 +48,9 @@
 			</div>
 			<footer>
 				<ul class="socials">
-					<a href="mailto: business@naomiwiren.com" class="fas fa-at"></a>
-					<a href="https://www.twitter.com/NaomiWiren" class="fab fa-twitter"></a>
-					<a href="https://noxyper.itch.io/" class="fab fa-itch-io"></a>
+					<a href="mailto: business@naomiwiren.com" target="_blank" class="fas fa-at"></a>
+					<a href="https://www.twitter.com/NaomiWiren" target="_blank" class="fab fa-twitter"></a>
+					<a href="https://noxyper.itch.io/" target="_blank" class="fab fa-itch-io"></a>
 				</ul>
 			</footer>
         </section>
