--- a/projects.html
+++ b/projects.html
@@ -21,8 +21,8 @@
 					<a href="https://naomiwiren.com/">About Me</a>
 					<a href="https://naomiwiren.com/projects">Projects</a>
 					<a href="https://naomiwiren.com/blog">Blog</a>
-					<a href="Files/CV.pdf">CV</a>
-					<a href="Files/Cover Letter.pdf">Cover Letter</a> <!-- Remove after submission -->
+					<a href="Files/CV.pdf" target="_blank">CV</a>
+					<a href="Files/Cover Letter.pdf" target="_blank">Cover Letter</a> <!-- Remove after submission -->
 				</div>
             </nav>
 		</header>
@@ -31,19 +31,19 @@
 			<div class="background projects">
 				<div class="name mobile-hide"></div>
 				<div class="big-thumb">
-					<a class="thumb dd-thumb" href="https://noxyper.itch.io/delivery-demolition/"></a>
-					<a class="thumb cw-thumb" href="https://noxyper.itch.io/caribbean-waters/"></a>
+					<a class="thumb dd-thumb" href="https://noxyper.itch.io/delivery-demolition/" target="_blank"></a>
+					<a class="thumb cw-thumb" href="https://noxyper.itch.io/caribbean-waters/" target="_blank"></a>
 				</div>
 				<div class="small-thumb">
-					<a class="thumb writing-thumb" href="https://www.reddit.com/NoxieWrites/"></a>
-					<a class="thumb github-thumb" href="https://www.github.com/Noxyper/"></a>
+					<a class="thumb writing-thumb" href="https://www.reddit.com/r/NoxieWrites/" target="_blank"></a>
+					<a class="thumb github-thumb" href="https://www.github.com/Noxyper/" target="_blank"></a>
 				</div>
 			</div>
 			<footer>
 				<ul class="socials">
-					<a href="mailto: business@naomiwiren.com" class="fas fa-at"></a>
-					<a href="https://www.twitter.com/NaomiWiren" class="fab fa-twitter"></a>
-					<a href="https://noxyper.itch.io/" class="fab fa-itch-io"></a>
+					<a href="mailto: business@naomiwiren.com" target="_blank" class="fas fa-at"></a>
+					<a href="https://www.twitter.com/NaomiWiren" target="_blank" class="fab fa-twitter"></a>
+					<a href="https://noxyper.itch.io/" target="_blank" class="fab fa-itch-io"></a>
 				</ul>
 			</footer>
         </section>
