Updated link to serial

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
         </section>
 		<section class="galleries">		
 			<div class="writing-ga gallery">
-				<a href="https://www.reddit.com/r/NoxieWrites/comments/j3x71m/new_serial_where_the_lighthouse_shines/">
+				<a href="https://www.naomiwiren.com/blog/serial-chapter/where-the-lighthouse-shines-ch1">
 					<div class="writing-gac gallery-card">
 						<img src="Assets/MissingImage.jpg" class="gac-image">
 						<div class="writing-gac-band gac-band"></div>
