--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
 			<div class="writing-ga gallery">
 				<a href="https://www.naomiwiren.com/blog/serial-chapter/where-the-lighthouse-shines-ch1">
 					<div class="writing-gac gallery-card">
-						<img src="Assets/MissingImage.jpg" class="gac-image">
+						<img src="Assets/Thumbnails/LighthouseThumb.png" class="gac-image">
 						<div class="writing-gac-band gac-band"></div>
 						<div class="gac-text">
 							<h1 class="gac-title">Where the Lighthouse Shines</h1>
@@ -249,15 +249,25 @@
 						</div>
 					</div>
 				</a>
+				<a href="https://www.naomiwiren.com/blog/short-story/short-story-homepage">
+					<div class="writing-gac gallery-card">
+						<img src="Assets/Thumbnails/ShortStoryThumb.png" class="gac-image">
+						<div class="writing-gac-band gac-band"></div>
+						<div class="gac-text">
+							<h1 class="gac-title">Short Stories</h1>
+							<p class="gac-desc">Occasionally, I write some short stories inspired by prompts found online. Among these are some that are simple slice of life stories, some that are a bit more metaphorical and fantastical, and some that are pure fantasy and spectacle.</p>
+						</div>
+					</div>
+				</a>
 			</div><!--
 			--><div class="code-ga gallery">
-				<a href="https://github.com/Noxyper/tic-tac-chat">
+				<a href="https://github.com/Noxyper/VATSReplica">
 					<div class="code-gac gallery-card">
-						<img src="Assets/MissingImage.jpg" class="gac-image">
+						<img src="Assets/Thumbnails/VATSThumb.png" class="gac-image">
 						<div class="code-gac-band gac-band"></div>
 						<div class="gac-text">
-							<h1 class="gac-title">Tic Tac Chat</h1>
-							<p class="gac-desc">A game created using the ASP.Net API. Built using standard Windows libraries such as WPF and ASP.Net, this Tic Tac Toe game has a built-in chat system to allow for communication between players. The project was created as part of the Computer Games Technology course at the University of Portsmouth</p>
+							<h1 class="gac-title">V.A.T.S. System from Fallout 4</h1>
+							<p class="gac-desc">A recreation of the targeting system as seen in the 3D Fallout games (Fallout 3, Fallout: New Vegas, Fallout 4). Created with Unity.</p>
 						</div>
 					</div>
 				</a>
