Structure Update and Renaming

--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         
 		
-		<link rel="icon" type="image/png" href="Assets/Icon.png">
+		<link rel="icon" type="image/png" href="assets/Icon.png">
         <link rel="stylesheet" type="text/css" href="style.css" />
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -46,10 +46,10 @@
 				<div class="navigation-hyperlinks">
 					<a href="projects.html">Projects</a>
 					<a href="index.html#about-me">About Me</a>
-					<a href="Files/CV.pdf" target="_blank">CV</a>
+					<a href="files/CV.pdf" target="_blank">CV</a>
 				</div>
 				<a href="index.html" class="navigation-logo">
-					<img data-light="Assets/Banner_White.png" data-dark="Assets/Banner_Black.png" src="Assets/Banner_Black.png" class="logo">
+					<img data-light="assets/Banner_White.png" data-dark="assets/Banner_Black.png" src="assets/Banner_Black.png" class="logo">
 				</a>
             </nav>
 		</header>
@@ -60,27 +60,27 @@
 		</section>
 		<section id="content">
 			<section id="projects">
-				<a href="ProjectPages/anythingworld.html">
+				<a href="projects/anythingworld.html">
 					<div class="project">
-						<img src="Assets/Thumbnails/AnythingWorld.png" class="thumbnail">
+						<img src="assets/thumbnails/AnythingWorld.png" class="thumbnail">
 						<div class="project-text">
 							<h1>Anything World - Unity Plugin</h1>
 							<p>Developed the tool for Unity users to interface with the capabilities of Anything World, ranging from streaming in assets from the web to ML-powered automatic rigging.</p>
 						</div>
 					</div>
 				</a>
-				<a href="ProjectPages/battlesweeper.html">
+				<a href="projects/battlesweeper.html">
 					<div class="project">
-						<img src="Assets/Thumbnails/Battlesweeper.png" class="thumbnail">
+						<img src="assets/thumbnails/Battlesweeper.png" class="thumbnail">
 						<div class="project-text">
 							<h1>Battlesweeper</h1>
 							<p>Developed as part of Grads in Games 'Search for a Star' competition in 2022. A combination of Battleships and Minesweeper, the game showcases my proficiencies with local multiplayer capabilities and game AI.</p>
 						</div>
 					</div>
 				</a>
-				<a href="ProjectPages/ugj.html">
+				<a href="projects/ugj.html">
 					<div class="project">
-						<img src="Assets/Thumbnails/GameJam.png" class="thumbnail">
+						<img src="assets/thumbnails/GameJam.png" class="thumbnail">
 						<div class="project-text">
 							<h1>University Game Jam</h1>
 							<p>Annually, I've taken part in the University of Portsmouth Game Jam, a week-long game jam with a focus on healthy development cycles and experimentation. Taken part both in teams and individually.</p>
@@ -89,7 +89,7 @@
 				</a>
 				<!--<a href="">
 					<div class="project">
-						<img src="Assets/Thumbnails/MissingImage.jpg" class="thumbnail">
+						<img src="assets/thumbnails/MissingImage.jpg" class="thumbnail">
 						<div class="project-text">
 							<h1>Empty</h1>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce nisi mi, rhoncus eu congue nec, ornare eu eros. Nulla facilisi. Nulla id velit vel leo hendrerit suscipit. Vestibulum sapien nunc.</p>
@@ -98,7 +98,7 @@
 				</a>
 				<a href="">
 					<div class="project">
-						<img src="Assets/Thumbnails/MissingImage.jpg" class="thumbnail">
+						<img src="assets/thumbnails/MissingImage.jpg" class="thumbnail">
 						<div class="project-text">
 							<h1>Empty</h1>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce nisi mi, rhoncus eu congue nec, ornare eu eros. Nulla facilisi. Nulla id velit vel leo hendrerit suscipit. Vestibulum sapien nunc.</p>
@@ -107,7 +107,7 @@
 				</a>
 				<a href="">
 					<div class="project">
-						<img src="Assets/Thumbnails/MissingImage.jpg" class="thumbnail">
+						<img src="assets/thumbnails/MissingImage.jpg" class="thumbnail">
 						<div class="project-text">
 							<h1>Empty</h1>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce nisi mi, rhoncus eu congue nec, ornare eu eros. Nulla facilisi. Nulla id velit vel leo hendrerit suscipit. Vestibulum sapien nunc.</p>
@@ -116,27 +116,27 @@
 				</a>-->
 			</section>
 			<section id="projects">
-				<!--<a href="ProjectPages/suiphobia.html">
+				<!--<a href="projects/suiphobia.html">
 					<div class="project">
-						<img src="Assets/Thumbnails/ELVTRGameWriting.png" class="thumbnail">
+						<img src="assets/thumbnails/ELVTRGameWriting.png" class="thumbnail">
 						<div class="project-text">
 							<h1>Suiphobia</h1>
 							<p>A game story developed during the Game Writing course headed by Lorne Nudel. Still in development.</p>
 						</div>
 					</div>
 				</a>-->
-				<a href="ProjectPages/maverickaviation.html">
+				<a href="projects/maverickaviation.html">
 					<div class="project">
-						<img src="Assets/Thumbnails/MaverickAviation.png" class="thumbnail">
+						<img src="assets/thumbnails/MaverickAviation.png" class="thumbnail">
 						<div class="project-text">
 							<h1>XR Jetpack Simulator</h1>
 							<p>Developed as part of a final-year coursework for Maverick Aviation. Saw the interfacing between Unity and a real-time physics simulator, and further communication with a 4DoF platform and Valve Index VR headset.</p>
 						</div>
 					</div>
 				</a>
-				<a href="ProjectPages/unityexperiments.html">
+				<a href="projects/unityexperiments.html">
 					<div class="project">
-						<img src="Assets/Thumbnails/UnityExperiments.png" class="thumbnail">
+						<img src="assets/thumbnails/UnityExperiments.png" class="thumbnail">
 						<div class="project-text">
 							<h1>Unity Experiments</h1>
 							<p>A collection of the different coursework I developed throughout my BSc in Unity. Coursework touches upon gameplay programming fundamentals, linear algebra, tools development, and game AI.</p>
@@ -145,7 +145,7 @@
 				</a>
 				<!--<a href="">
 					<div class="project">
-						<img src="Assets/Thumbnails/MissingImage.jpg" class="thumbnail">
+						<img src="assets/thumbnails/MissingImage.jpg" class="thumbnail">
 						<div class="project-text">
 							<h1>Empty</h1>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce nisi mi, rhoncus eu congue nec, ornare eu eros. Nulla facilisi. Nulla id velit vel leo hendrerit suscipit. Vestibulum sapien nunc.</p>
@@ -154,7 +154,7 @@
 				</a>
 				<a href="">
 					<div class="project">
-						<img src="Assets/Thumbnails/MissingImage.jpg" class="thumbnail">
+						<img src="assets/thumbnails/MissingImage.jpg" class="thumbnail">
 						<div class="project-text">
 							<h1>Empty</h1>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce nisi mi, rhoncus eu congue nec, ornare eu eros. Nulla facilisi. Nulla id velit vel leo hendrerit suscipit. Vestibulum sapien nunc.</p>
@@ -163,7 +163,7 @@
 				</a>
 				<a href="">
 					<div class="project">
-						<img src="Assets/Thumbnails/MissingImage.jpg" class="thumbnail">
+						<img src="assets/thumbnails/MissingImage.jpg" class="thumbnail">
 						<div class="project-text">
 							<h1>Empty</h1>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce nisi mi, rhoncus eu congue nec, ornare eu eros. Nulla facilisi. Nulla id velit vel leo hendrerit suscipit. Vestibulum sapien nunc.</p>
