--- a/projects/battlesweeper.html
+++ b/projects/battlesweeper.html
@@ -17,7 +17,7 @@
 		<script src="https://kit.fontawesome.com/14b0c5612d.js" crossorigin="anonymous"></script>
 		<script type='text/javascript' src='https://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js'></script>
 
-        <title>Naomi Wirén | Anything World - Unity Plugin</title>
+        <title>Naomi Wirén | Battlesweeper</title>
 	</head>
 	<body>
 		<header>
@@ -46,10 +46,10 @@
 				<div class="navigation-hyperlinks">
 					<a href="../projects.html">Projects</a>
 					<a href="../index.html#about-me">About Me</a>
-					<a href="../Files/CV.pdf" target="_blank">CV</a>
+					<a href="../files/CV.pdf" target="_blank">CV</a>
 				</div>
 				<a href="../index.html" class="navigation-logo">
-					<img data-light="../Assets/Banner_White.png" data-dark="../Assets/Banner_Black.png" src="../Assets/Banner_Black.png" class="logo">
+					<img data-light="../assets/Banner_White.png" data-dark="../assets/Banner_Black.png" src="../assets/Banner_Black.png" class="logo">
 				</a>
             </nav>
 		</header>
@@ -57,9 +57,9 @@
 			<div class="backdrop">
 				<div class="pattern">
 					<div class="profile">
-						<img src="../Assets/Thumbnails/AnythingWorld.png">
+						<img src="../assets/thumbnails/Battlesweeper.png">
 						<div class="profile-info">
-							<h1>Anything World - Unity Plugin</h1>
+							<h1>Battlesweeper</h1>
 						</div>
 					</div>
 				</div>
@@ -67,30 +67,29 @@
 		</section>
 		
 		<section class="project-detail">
-			<h1>Anything World</h1>
-			<p>Between 2022 and 2024, I worked as a 3D Software Engineer for the London upstart Anything World. In the years since, the studio has grown to be over 30 people and has seen a large growth in product variety, from server-side automatic rigging and asset streaming in a large variety of commercial game-centric tools and engines, such as Unity, Unreal, and Blender.<br><br>During the period of May 2022 to September 2023, my duties primarily focused on UX and UI improvements, with my lead taking charge in developing the systems of the tool. During this time, the two of us worked on the Unity plugin by ourselves. In September 2023, after my lead's departure from the company, I took responsibility over the Unity plugin primarily, introducing features such as the server-side ML-powered automatic rigging into the Unity plugin, as well as refining the user experience and codebase.</p>
-			<h1>Responsibilities</h1>
+			<h1>Battlesweeper</h1>
+			<p>In the final year of my Bachelor's, amidst my other coursework I took part in the Grads in Games competition "Search for a Star". The competition saw me attempt to twist an existing project into something unique. The year I participated, we were given a project that had the basic mechanics of Minesweeper attached.<br><br>In February 2022, when I had the time to sit down and work on this project, freshly having finished my game AI course at the university, I attempted to extend the functionality of Minesweeper to incorporate some multiplayer elements, specifically from Battleships. As multiplayer games propose an issue in testing as it requires multiple players, I also added in an AI for players to play against. Additionally, I took the time to ensure the game felt "complete" by juicing the game slightly - adding in some custom music, slight animations, shaders, and alternative game modes.<br><br>This project, in conjunction with a code test, made me a finalist in the Search for a Star competition, where I was in the standing as one of the best student programmers in the graduating year of 2022 across the UK.</p>
+			<h1>Skills Showcased</h1>
 			<ul>
-				<li>Worked extensively with editor-side development in the Unity Engine.</li>
-				<li>Implemented web API-centric mechanics and integrated them into the Unity Editor.</li>
-				<li>Translated Figma UX designs into a practical user interface using the Unity IMGUI systems.</li>
-				<li>Represented the company at national and international conferences, such as GDC, Develop:Brighton, and Web Summit.</li>
-				<li>Held presentations and product showcases, ranging from non-profit organisations such as Grads in Games and Into Games to prospecting clients such as game studios.</li>
+				<li>Successfully dissecting and understanding an existing codebase.</li>
+				<li>Juicing, bug testing, and quality assurance.</li>
+				<li>Research into and successful implementation of suitable artificial intelligence for Minesweeper.</li>
+				<li>Creative problem solving and game design work.</li>
 			</ul>
 			<div class="--center-game-link">
-				<a href="https://anything.world/" target="_blank">
+				<a href="https://wimiwastaken.itch.io/battlesweeper" target="_blank">
 					<div class="game-link">
-						<h1>Download the Tool Here</h1>
+						<h1>Play the Game Here</h1>
 					</div>
 				</a>
 			</div>
 			<div class="project-gallery">
-				<img src="anythingworld.html_Assets/AnythingWorld_Browser.png" style="flex: 1 1">
-				<img src="../Assets/AboutMe_Backdrop.png" style="flex: 4.8 1">
+				<img src="battlesweeper.html_Assets/Game_0.png" style="flex: 1 1">
+				<img src="battlesweeper.html_Assets/Game_1.png" style="flex: 2.67 1">
 			</div>
 			<div class="project-gallery">	
-				<img src="anythingworld.html_Assets/GDC.png" style="flex: 1 1">
-				<img src="anythingworld.html_Assets/AnythingWorld_AA.png" style="flex: 0.49 1">
+				<img src="battlesweeper.html_Assets/Game_2.png" style="flex: 1 1">
+				<img src="battlesweeper.html_Assets/Game_3.png" style="flex: 1 1">
 			</div>
 		</section>
 	</body>
