--- a/projects/maverickaviation.html
+++ b/projects/maverickaviation.html
@@ -17,7 +17,7 @@
 		<script src="https://kit.fontawesome.com/14b0c5612d.js" crossorigin="anonymous"></script>
 		<script type='text/javascript' src='https://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js'></script>
 
-        <title>Naomi Wirén | Suiphobia</title>
+        <title>Naomi Wirén | XR Jetpack Simulator</title>
 	</head>
 	<body>
 		<header>
@@ -46,10 +46,10 @@
 				<div class="navigation-hyperlinks">
 					<a href="../projects.html">Projects</a>
 					<a href="../index.html#about-me">About Me</a>
-					<a href="../Files/CV.pdf" target="_blank">CV</a>
+					<a href="../files/CV.pdf" target="_blank">CV</a>
 				</div>
 				<a href="../index.html" class="navigation-logo">
-					<img data-light="../Assets/Banner_White.png" data-dark="../Assets/Banner_Black.png" src="../Assets/Banner_Black.png" class="logo">
+					<img data-light="../assets/Banner_White.png" data-dark="../assets/Banner_Black.png" src="../assets/Banner_Black.png" class="logo">
 				</a>
             </nav>
 		</header>
@@ -57,9 +57,9 @@
 			<div class="backdrop">
 				<div class="pattern">
 					<div class="profile">
-						<img src="../Assets/Thumbnails/ELVTRGameWriting.png">
+						<img src="../assets/thumbnails/MaverickAviation.png">
 						<div class="profile-info">
-							<h1>Suiphobia</h1>
+							<h1>XR Jetpack Simulator</h1>
 						</div>
 					</div>
 				</div>
@@ -67,19 +67,19 @@
 		</section>
 		
 		<section class="project-detail">
-			<h1>Suiphobia</h1>
+			<h1>XR Jetpack Simulator</h1>
 			<p></p>
 			<h1>Responsibilities</h1>
 			<ul>
 				<li></li>
 			</ul>
 			<div class="project-gallery">
-				<img src="../Assets/Thumbnails/MissingImage.jpg" style="flex: 1 1">
-				<img src="../Assets/Thumbnails/MissingImage.jpg" style="flex: 1 1">
+				<img src="../assets/thumbnails/MissingImage.jpg" style="flex: 1 1">
+				<img src="../assets/thumbnails/MissingImage.jpg" style="flex: 1 1">
 			</div>
 			<div class="project-gallery">	
-				<img src="../Assets/Thumbnails/MissingImage.jpg" style="flex: 1 1">
-				<img src="../Assets/Thumbnails/MissingImage.jpg" style="flex: 1 1">
+				<img src="../assets/thumbnails/MissingImage.jpg" style="flex: 1 1">
+				<img src="../assets/thumbnails/MissingImage.jpg" style="flex: 1 1">
 			</div>
 		</section>
 	</body>
