--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         
 		
-		<link rel="icon" type="image/png" href="Assets/Icon.png">
+		<link rel="icon" type="image/png" href="assets/Icon.png">
         <link rel="stylesheet" type="text/css" href="style.css" />
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -46,10 +46,10 @@
 				<div class="navigation-hyperlinks">
 					<a href="projects.html">Projects</a>
 					<a href="index.html#about-me">About Me</a>
-					<a href="Files/CV.pdf" target="_blank">CV</a>
+					<a href="files/CV.pdf" target="_blank">CV</a>
 				</div>
 				<a href="index.html" class="navigation-logo">
-					<img data-light="Assets/Banner_White.png" data-dark="Assets/Banner_Black.png" src="Assets/Banner_Black.png" class="logo">
+					<img data-light="assets/Banner_White.png" data-dark="assets/Banner_Black.png" src="assets/Banner_Black.png" class="logo">
 				</a>
             </nav>
 		</header>
@@ -57,7 +57,7 @@
 			<div class="backdrop">
 				<div class="pattern">
 					<div class="profile">
-						<img src="Assets/Portrait.png">
+						<img src="assets/Portrait.png">
 						<div class="profile-info">
 							<div>
 								<h1>Naomi Nemo Wirén</h1>
@@ -70,18 +70,18 @@
 		</section>
 		<section id="content">
 			<section id="about-me">
-				<img src="Assets/AboutMe_Backdrop.png" class="banner">
+				<img src="assets/AboutMe_Backdrop.png" class="banner">
 				<h1>Apologies, I didn't expect company...</h1>
 				<p>Thank you for checking out my portfolio! If you are here just to see my projects, you can have a look at the section to the right of this intro. You can also from here double-check anything from my CV that would merit needing receipts, such as any certificates or awards. But if you're here to learn more about me - I appreciate it! Hopefully you'll find what you're looking for!<br><br>My name is Naomi Nemo Wirén. I'm a Swedish game developer, practicing programming, games design, and games writing since 2016. Back when I moved to the UK in 2019, I had one goal: to become someone who knew what they talked about. Since then I have accomplished two degrees, taken part in multiple outreach programmes to help get university students into the games industry, and taken part in developing a product for a successful London start-up.<br><br>Outside of my feats, I am currently pursuing a rekindled passion of mine. Writing and storytelling has always interested me, and I am currently pursuing paths to become a better writer. I have in the past written stories for all manners of mediums, ranging from comedy sketches with my friends when I was in primary school, to short stories and poems in my college days. These days, I am still writing in the form of my personal book writing project, as well as learning how to adapt a story for games both through game writing courses tutored by respected writers in the games industry such as Lorne Nudel and more practically and small-scale in the hobby taking up most of my free-time: tabletop role-playing games.<br><br>Whether you are considering me for a writing position or a programming position, I promise to not let you down. I always aim to go above and beyond - this website for example was written by hand in HTML, CSS, and JQuery, despite me not having any prior experience with these languages. I hope my tenacity and willpower to ensure that whatever project I work on is as best as it can be sounds like something you would consider.<br><br>Kind regards,</p>
-				<img src="Assets/Signature.png" class="signature">
+				<img src="assets/Signature.png" class="signature">
 				<div class="extra-evidence">
-					<a href="Files/TIGACertificate.pdf">'TIGA Graduate of the Year: Programmer 2022' Certificate</a>		
+					<a href="files/TIGACertificate.pdf">'TIGA Graduate of the Year: Programmer 2022' Certificate</a>		
 				</div>
 			</section>
 			<section id="projects">
-				<a href="ProjectPages/anythingworld.html">
+				<a href="projects/anythingworld.html">
 					<div class="project">
-						<img src="Assets/Thumbnails/AnythingWorld.png" class="thumbnail">
+						<img src="assets/thumbnails/AnythingWorld.png" class="thumbnail">
 						<div class="project-text">
 							<h1>Anything World - Unity Plugin</h1>
 							<p>Developed the tool for Unity users to interface with the capabilities of Anything World, ranging from streaming in assets from the web to ML-powered automatic rigging.</p>
@@ -89,9 +89,9 @@
 					</div>
 				</a>
 				<!--
-				<a href="ProjectPages/suiphobia.html">
+				<a href="projects/suiphobia.html">
 					<div class="project">
-						<img src="Assets/Thumbnails/ELVTRGameWriting.png" class="thumbnail">
+						<img src="assets/thumbnails/ELVTRGameWriting.png" class="thumbnail">
 						<div class="project-text">
 							<h1>Suiphobia</h1>
 							<p>A game story developed during the Game Writing course headed by Lorne Nudel.</p>
@@ -99,36 +99,36 @@
 					</div>
 				</a>
 				-->
-				<a href="ProjectPages/battlesweeper.html">
+				<a href="projects/battlesweeper.html">
 					<div class="project">
-						<img src="Assets/Thumbnails/Battlesweeper.png" class="thumbnail">
+						<img src="assets/thumbnails/Battlesweeper.png" class="thumbnail">
 						<div class="project-text">
 							<h1>Battlesweeper</h1>
 							<p>Developed as part of Grads in Games 'Search for a Star' competition in 2022. A combination of Battleships and Minesweeper, the game showcases my proficiencies with local multiplayer capabilities and game AI.</p>
 						</div>
 					</div>
 				</a>
-				<a href="ProjectPages/ugj.html">
+				<a href="projects/ugj.html">
 					<div class="project">
-						<img src="Assets/Thumbnails/GameJam.png" class="thumbnail">
+						<img src="assets/thumbnails/GameJam.png" class="thumbnail">
 						<div class="project-text">
 							<h1>University Game Jam</h1>
 							<p>Annually, I've taken part in the University of Portsmouth Game Jam, a week-long game jam with a focus on healthy development cycles and experimentation. Taken part both in teams and individually.</p>
 						</div>
 					</div>
 				</a>
-				<a href="ProjectPages/maverickaviation.html">
+				<a href="projects/maverickaviation.html">
 					<div class="project">
-						<img src="Assets/Thumbnails/MaverickAviation.png" class="thumbnail">
+						<img src="assets/thumbnails/MaverickAviation.png" class="thumbnail">
 						<div class="project-text">
 							<h1>XR Jetpack Simulator</h1>
 							<p>Developed as part of a final-year coursework for Maverick Aviation. Saw the interfacing between Unity and a real-time physics simulator, and further communication with a 4DoF platform and Valve Index VR headset.</p>
 						</div>
 					</div>
 				</a>
-				<a href="ProjectPages/unityexperiments.html">
+				<a href="projects/unityexperiments.html">
 					<div class="project">
-						<img src="Assets/Thumbnails/UnityExperiments.png" class="thumbnail">
+						<img src="assets/thumbnails/UnityExperiments.png" class="thumbnail">
 						<div class="project-text">
 							<h1>Unity Experiments</h1>
 							<p>A collection of the different coursework I developed throughout my BSc in Unity. Coursework touches upon gameplay programming fundamentals, linear algebra, tools development, and game AI.
