--- a/projects/ugj.html
+++ b/projects/ugj.html
@@ -46,10 +46,10 @@
 				<div class="navigation-hyperlinks">
 					<a href="../projects.html">Projects</a>
 					<a href="../index.html#about-me">About Me</a>
-					<a href="../Files/CV.pdf" target="_blank">CV</a>
+					<a href="../files/CV.pdf" target="_blank">CV</a>
 				</div>
 				<a href="../index.html" class="navigation-logo">
-					<img data-light="../Assets/Banner_White.png" data-dark="../Assets/Banner_Black.png" src="../Assets/Banner_Black.png" class="logo">
+					<img data-light="../assets/Banner_White.png" data-dark="../assets/Banner_Black.png" src="../assets/Banner_Black.png" class="logo">
 				</a>
             </nav>
 		</header>
@@ -57,7 +57,7 @@
 			<div class="backdrop">
 				<div class="pattern">
 					<div class="profile">
-						<img src="../Assets/Thumbnails/GameJam.png">
+						<img src="../assets/thumbnails/GameJam.png">
 						<div class="profile-info">
 							<h1>University Game Jam</h1>
 						</div>
